test/spec_vectors/f64/fail/module_8.wat
(module (func (result f64) (f64.floor (i64.const 0))))